feat: add onlyBuiltDependencies for esbuild and vue-demi

--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
       "ignoreMissing": [
         "@algolia/client-search"
       ]
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "vue-demi"
+    ]
   }
 }
